docs/tailwind.css
/* ... */
.dark {
    --vp-c-bg: theme(--color-mauve-900);
    --vp-c-border: theme(--color-mauve-100);
    --twoslash-border-color: theme(--color-mauve-100);
    --vp-c-bg-alt: theme(--color-mauve-800);
    --vp-c-bg-soft: theme(--color-mauve-800);
    --vp-c-divider: theme(--color-mauve-700);
    --vp-code-block-bg: theme(--color-mauve-800);
    --vp-c-bg-alpha-with-backdrop: #1f2937bf;
    --vp-code-copy-code-bg: theme(--color-mauve-800);
    --vp-code-copy-code-hover-bg: theme(--color-mauve-800);
    --vp-c-text-dark-2: #8a8a8a;
    --vp-c-text-dark-3: #8a8a8a;
    --vp-custom-block-tip-bg: #064e3b;
    --vp-custom-block-tip-border: #052e16;
    --vp-custom-block-tip-text: #f0fdf4;
    --vp-c-brand-nav-active: color-mix(
        in srgb,
        var(--vp-c-brand-dark) 30%,
        transparent 100%
    );

    --vp-code-tab-divider: theme(--color-mauve-700);

    --twoslash-border-color: var(--color-mauve-800);
    --vp-c-bg-elv: theme(--color-mauve-800);
    --vp-c-neutral-inverse: theme(--color-mauve-800);

    --vp-code-copy-code-bg: theme(--color-mauve-800);
    --vp-code-copy-code-hover-bg: theme(--color-mauve-700);
    --vp-code-copy-code-border-color: theme(--color-mauve-600);

    --vp-icon-copy: url('data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20stroke=%22rgb(160,160,160)%22%20stroke-width=%221.5%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22%3E%3Crect%20width=%2214%22%20height=%2214%22%20x=%228%22%20y=%228%22%20rx=%222%22%20ry=%222%22/%3E%3Cpath%20d=%22M4%2016c-1.1%200-2-.9-2-2V4c0-1.1.9-2%202-2h10c1.1%200%202%20.9%202%202%22/%3E%3C/svg%3E');
    --vp-icon-copied: url('data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20stroke=%22rgb(160,160,160)%22%20stroke-width=%222%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22%3E%3Cpath%20d=%22M20%206%209%2017l-5-5%22/%3E%3C/svg%3E');
}

@utility rounded-full {
    corner-shape: round;
}

@supports (corner-shape: squircle) {
    * {
        corner-shape: superellipse(1.2);
    }

    :root {
        --radius-xs: 0.171875rem;
        --radius-sm: 0.34375rem;
        --radius-md: 0.515625rem;
        --radius-lg: 0.6765rem;
        --radius-xl: 1.03125rem;
        --radius-2xl: 1.375rem;
        --radius-3xl: 2.0625rem;
    }
}

html,
body {
    background-color: var(--vp-c-bg) !important;
}

::view-transition-group(root) {
    animation-timing-function: var(--expo-in);
    z-index: 1000;
}

.theme-switch-overlay {
    position: fixed;
    inset: 0;
    opacity: 0;
    pointer-events: none;
}

html.-theme-switching .theme-switch-overlay {
    view-transition-name: theme-switch-overlay;
}

::view-transition-group(theme-switch-overlay) {
    z-index: 1001;
}

::view-transition-old(theme-switch-overlay) {
    display: none;
}

::view-transition-new(theme-switch-overlay) {
    mask: url('/assets/shigure-ui-smol.gif') center / 0 no-repeat;
    animation: theme-switch-overlay var(--switch-duration) both;
    mix-blend-mode: normal;
}

html.-theme-switching-from-dark::view-transition-new(theme-switch-overlay) {
    background: white;
}

html.-theme-switching:not(.-theme-switching-from-dark)::view-transition-new(theme-switch-overlay) {
    background: black;
}

::view-transition-new(root) {
    mask: url('/assets/shigure-ui-smol.gif') center / 0 no-repeat;
    animation: var(--switch-name) var(--switch-duration);
    animation-fill-mode: both;
    animation-timing-function: cubic-bezier(0.7, 0, 0.84, 0);
}

::view-transition-old(root),
.dark::view-transition-old(root) {
    animation: var(--switch-name) var(--switch-duration);
    animation-fill-mode: both;
    animation-timing-function: cubic-bezier(0.7, 0, 0.84, 0);
}

@keyframes scale {
    0% {
        mask-size: 0;
    }
    10% {
        mask-size: 25vmax;
    }
    90% {
        mask-size: 25vmax;
    }
    100% {
        mask-size: 750vmax;
    }
}

@keyframes scale-fast {
    0% {
        mask-size: 0;
    }
    10% {
        mask-size: 25vmax;
    }
    87.5% {
        mask-size: 25vmax;
    }
    100% {
        mask-size: 750vmax;
    }
}

@keyframes theme-switch-overlay {
    0% {
        mask-size: 0;
        opacity: 1;
    }

    10%,
    90% {
        mask-size: 25vmax;
        opacity: 1;
    }

    100% {
        mask-size: 25vmax;
        opacity: 0;
    }
}

button.copy::after {
    top: 0;
    width: 40px;
    height: 40px;
    color: var(--vp-icon-copy);
    background-size: contain;
}

.VPNavBarTitle.has-sidebar .title {
    border: 0;
}

/* .VPNavBarTitle > a > span {
    @apply hidden;
}

.logo {
    @apply hidden;
} */

#embedded-editor {
    @apply my-6 h-[720px] w-full rounded-lg border-0;
}

.dark #VPSidebarNav {
    --vp-c-brand-1: oklch(82.3% 0.12 346.018);
}

#VPSidebarNav > .group > .VPSidebarItem > .item > .text::before {
    @apply mr-2 block w-4 h-4 bg-cover;
    content: '';
}
/* ... */

